<resources>
    <string name="app_name">BiblioUnifor</string>
    <string name="acesse_sua_conta">Acesse sua Conta</string>

    <string name="titulo_redefinir">Redefinir Senha</string>
    <string name="descricao_redefinir">
        Preencha os campos abaixo com a sua nova senha.
    </string>

    <string name="descricao_confirmacao_codigo">
        Por favor, insira abaixo o código de
        \n verificação enviado ao seu e-mail.
        \n O código será expirado em 2:00.
    </string>

    <string name="nova_senha">Nova senha</string>
    <string name="confirmar_senha">Confirme a senha</string>
    <string name="digite_codigo">Digite aqui seu código</string>

    <string name="btn_redefinir">Redefinir Senha</string>
    <string name="btn_enviar">Enviar</string>
    <string name="voltar">Voltar</string>
    <string name="reenviar">Reenviar Código</string>

    <string name="erro_campo">Campo Obrigatório</string>
    <string name="erro_codigo">Codigo Incorreto</string>

    <string name="requisitos_senha">
    A senha deve conter:
    \n• Pelo menos 8 caracteres
    \n• Uma letra maiúscula
    \n• Um número
    </string>

    <string name="erro_senha_igual">A senha é a mesma da antiga</string>
    <string name="erro_senha_diferente">As senhas estão diferentes, verifique!</string>

    <string name="titulo_renovacao_aluguel">Renovação de Aluguel</string>

    <string name="descricao_renovacao_aluguel">
        Por quantos dias a mais você deseja
        \n estender o aluguel desse livro?
    </string>
    <string name="btn_confirmar">Confirmar</string>

    <string name="btn_solicitar_pdf">Solicitar PDF</string>
    <string name="btn_solicitar_braile">Solicitar Braile</string>
    <string name="btn_solicitar_audiobook">Solicitar Audiobook</string>
    <string name="btn_reservar">Reservar</string>
    <string name="btn_comprar_amazon">Comprar (Amazon)</string>
    <string name="btn_setor_localizado">Setor Localizado</string>

    <string name="titulo_livro">O Alienista</string>
    <string name="autor_livro">por Machado de Assis</string>
    <string name="genero_livro">Novela</string>

    <string name="btn_remover_historico">Remover do Histórico</string>
    <string name="nome_usuario">João Bobo</string>

    <!-- Apagar Conta Popup -->
    <string name="apagar_conta_titulo">Apagar conta?</string>
    <string name="apagar_conta_subtitulo">Digite sua senha atual</string>
    <string name="apagar_conta_erro">Digite sua senha atual!</string>
    <string name="hint_sua_senha">Sua senha</string>
    <string name="desc_mostrar_ocultar_senha">Mostrar ou ocultar senha</string>

    <string name="desc_perfil">Foto de perfil</string>
    <string name="email_usuario_exemplo">joao.bobo@email.com</string>
    <string name="desc_editar_usuario">Editar nome de usuário</string>
    <string name="label_pesquisa">Pesquisar</string>
    <string name="desc_pesquisa">Ícone de pesquisa</string>
    <string name="label_nome">Nome</string>
    <string name="hint_nome">Seu nome</string>
    <string name="desc_editar_campo">Editar este campo</string>
    <string name="label_usuario">Usuário</string>
    <string name="usuario_exemplo">@joaobobo</string>
    <string name="hint_usuario">Seu nome de usuário</string>
    <string name="label_bio">Bio</string>
    <string name="bio_exemplo">Amante de livros e café.</string>
    <string name="hint_bio">Escreva algo sobre você</string>
    <string name="label_senha_atual">Senha Atual</string>
    <string name="placeholder_senha">********</string>
    <string name="btn_redefinir_senha_config">Redefinir Senha</string>
    <string name="btn_voltar_inicial">Voltar à Tela Inicial</string>
    <string name="btn_apagar_conta_config">Apagar Conta</string>

    <string name="nav_home_desc">Início</string>
    <string name="nav_carrinho_desc">Carrinho</string>
    <string name="nav_busca_desc">Pesquisar</string>
    <string name="nav_favoritos_desc">Favoritos</string>
    <string name="nav_lista_desc">Minha Lista</string>
    <string name="nav_perfil_desc">Meu Perfil</string>

    <string name="nav_home">Home</string>
    <string name="nav_carrinho">Carrinho</string>
    <string name="nav_busca">Busca</string>
    <string name="nav_favoritos">Favoritos</string>
    <string name="nav_lista">Lista</string>
    <string name="nav_usuario">Perfil</string>

    <!-- RF35 - Cadastro de Livro -->
    <string name="titulo_adicionar_midia">Adicionar Mídia</string>
    <string name="label_titulo_livro">Título do Livro</string>
    <string name="hint_titulo_livro">Ex: O Alienista</string>
    <string name="label_autor">Autor</string>
    <string name="hint_autor">Ex: Machado de Assis</string>
    <string name="label_isbn">Código ISBN</string>
    <string name="hint_isbn">000-00-000-0000-0</string>
    <string name="label_data_publicacao">Data de publicação do Livro</string>
    <string name="hint_data">DD/MM/AAAA</string>
    <string name="label_quantidade">Quantidade de exemplares</string>
    <string name="hint_quantidade">Ex: 10</string>
    <string name="btn_editar_mais_infos">Editar mais informações</string>
    <string name="erro_campos_vazios">Preencha todos os campos!</string>

    <!-- RF35.1 - Data -->
    <string name="titulo_escolha_data">Escolha a data de publicação</string>

    <!-- RF35.3 - Extras -->
    <string name="titulo_adicionar_midia_extras">Adicionar Mídia – Extras</string>
    <string name="label_paginas">Quantidade de Páginas</string>
    <string name="hint_paginas">Ex: 300</string>
    <string name="label_categoria">Categoria</string>
    <string name="hint_categoria">Ex: Ficção</string>
    <string name="label_editora">Editora</string>
    <string name="hint_editora">Ex: Editora Unifor</string>
    <string name="label_link_imagem">Link da Imagem de Capa</string>
    <string name="hint_link_imagem">https://linkdaimagem.com</string>
    <string name="label_sinopse">Sinopse</string>
    <string name="hint_sinopse">Escreva a sinopse do livro aqui...</string>

    <!-- RF35.4 - Versões -->
    <string name="label_pdf">Arquivo PDF</string>
    <string name="hint_pdf">Link do arquivo PDF</string>
    <string name="label_audiobook">Arquivo Audiobook</string>
    <string name="hint_audiobook">Link do arquivo de áudio</string>
    <string name="label_braille">Disponível em Braille</string>
    <string name="btn_salvar_novo_livro">Salvar novo livro</string>

    <!-- RF35.6 - Popup Sucesso -->
    <string name="titulo_parabens">Parabéns!</string>
    <string name="texto_livro_salvo">Livro salvo com sucesso.\nVoltando para mídias</string>

    <string name="fechar_x">X</string>
    <string name="hint_nova_senha">Digite a nova senha</string>
    <string name="erro_senha_invalida">A senha não atende aos requisitos</string>
    <string name="hint_confirmar_senha">Confirme a nova senha</string>
    <string name="erro_senhas_nao_coincidem">As senhas não coincidem</string>
    <string name="btn_salvar_alteracoes">Salvar Alterações</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
</resources>